[gd_scene load_steps=12 format=3 uid="uid://cs57ndiljnd40"]

[ext_resource type="Script" path="res://UI/Inventory/card.gd" id="1_3obcm"]
[ext_resource type="Texture2D" uid="uid://be54y04enc1y5" path="res://UI/Inventory/Assets/cardbase.aseprite" id="1_v34h4"]
[ext_resource type="Texture2D" uid="uid://baudmyxtargry" path="res://UI/Inventory/Assets/cardback.aseprite" id="2_04oe5"]
[ext_resource type="FontFile" uid="uid://spn4ve4oisi6" path="res://Fonts/TripleN.ttf" id="3_qtix5"]
[ext_resource type="PackedScene" uid="uid://uhs2dwlyln7x" path="res://UI/ToolTip/Tooltip.tscn" id="5_l1vop"]
[ext_resource type="Texture2D" uid="uid://dwoow2i08hjm2" path="res://UI/Assets/attack_sprites.png" id="6_rymyj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewehv"]
size = Vector2(16, 21)

[sub_resource type="LabelSettings" id="LabelSettings_b0old"]
font = ExtResource("3_qtix5")
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_imhge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cardbase:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cardbase:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_04oe5")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cardbase/WeaponIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cardbase/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cardbase/Label:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_3ejft"]
resource_name = "show_card"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cardbase:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cardbase:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.132333, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("2_04oe5"), ExtResource("2_04oe5"), ExtResource("1_v34h4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cardbase/WeaponIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.132333, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cardbase/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133233, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cardbase/Label:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l1bl5"]
_data = {
"RESET": SubResource("Animation_imhge"),
"show_card": SubResource("Animation_3ejft")
}

[node name="Card" type="Node2D"]
script = ExtResource("1_3obcm")

[node name="Cardbase" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_04oe5")

[node name="Area2D" type="Area2D" parent="Cardbase"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cardbase/Area2D"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_ewehv")

[node name="Tooltip" parent="Cardbase" instance=ExtResource("5_l1vop")]
position = Vector2(0, -11)

[node name="WeaponIcon" type="Sprite2D" parent="Cardbase"]
visible = false
position = Vector2(-0.5, -1)
texture = ExtResource("6_rymyj")
hframes = 9
frame = 1

[node name="Label" type="Label" parent="Cardbase"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -13.5
offset_top = -20.0
offset_right = -5.5
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(4, 5)
text = "4"
label_settings = SubResource("LabelSettings_b0old")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l1bl5")
}
speed_scale = 0.7

[connection signal="input_event" from="Cardbase/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_exited" from="Cardbase/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
